--- a/server/Gemfile
+++ b/server/Gemfile
@@ -10,6 +10,10 @@ gem "pg", "~> 1.1"
 
 gem "dotenv-rails"
 
+gem "jwt"
+
+gem "bcrypt"
+
 # Use the Puma web server [https://github.com/puma/puma]
 gem "puma", ">= 5.0"
 
@@ -47,4 +51,3 @@ group :development do
   # gem "spring"
 
 end
-
