--- a/client/package.json
+++ b/client/package.json
@@ -27,5 +27,12 @@
 		"typescript": "^5.0.0",
 		"vite": "^4.4.2"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"autoprefixer": "^10.4.16",
+		"postcss": "^8.4.31",
+		"svelte-hero-icons": "^5.0.0",
+		"tailwindcss": "^3.3.5",
+		"typescript-svelte-plugin": "^0.3.34"
+	}
 }
